--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,13 @@
 body {
   /* background-color: tomato; */
   font-family: "Plus Jakarta Sans", sans-serif !important;
+  display: flex;
+  flex-direction: column;
+  min-width: 100vh;
+}
+
+.container {
+  flex: 1;
 }
 
 .navbar {
@@ -76,4 +83,10 @@ body {
 .card-img-overlay:hover {
   opacity: 0.3;
   background-color: antiquewhite;
+}
+
+/* new page */
+.add-btn {
+  background-color: rgb(245, 37, 37) !important ;
+  border: none !important;
 }
