--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,21 +1,80 @@
 <% layout("/layouts/boilerplate")%>
+<body>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <br /><br />
+      <h3>Create a New Listing</h3>
+      <form method="POST" action="/listings">
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            name="listing[title]"
+            placeholder="Add a catchy title"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <!-- <br /><br /> -->
 
-    <body>
-        <h3>Create a New Listing</h3>
-        <form method="POST" action="/listings">
-            <input name="listing[title]" placeholder="enter title" type="text">
-            <br><br>
-            <textarea name="listing[description]" placeholder="enter description">
-        </textarea>
-            <br><br>
-            <input name="listing[image]" placeholder="enter URL" type="text">
-            <br><br>
-            <input name="listing[price]" placeholder="enter price" type="number">
-            <br><br>
-            <input name="listing[country]" placeholder="enter country" type="text">
-            <br><br>
-            <input name="listing[location]" placeholder="enter location" type="text">
-            <br><br>
-            <button>Add</button>
-        </form>
-    </body>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea
+            name="listing[description]"
+            placeholder="enter description"
+            class="form-control"
+          >
+          </textarea>
+        </div>
+        <!-- <br /><br /> -->
+        <div class="mb-3">
+          <label for="image" class="form-label">Image</label>
+          <input
+            name="listing[image]"
+            placeholder="enter URL"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <!-- <br /><br /> -->
+
+        <div class="row">
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input
+              name="listing[price]"
+              placeholder="1200"
+              type="number"
+              class="form-control"
+            />
+          </div>
+
+          <!-- <br /><br /> -->
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+
+            <input
+              name="listing[country]"
+              placeholder="India"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <!-- <br /><br /> -->
+        <div class="mb-3">
+          <label for="location" class="form-label">Location </label>
+
+          <input
+            name="listing[location]"
+            placeholder="Jaipur, Rajasthan"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <!-- <br /><br /> -->
+        <button class="btn btn-dark add-btn">Add</button>
+      </form>
+      <br /><br />
+    </div>
+  </div>
+</body>
