--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,26 +1,84 @@
 <% layout("/layouts/boilerplate")%>
 
-    <body>
-        <h3>Edit Listing</h3>
+<body>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <br /><br />
+      <h3>Edit Listing</h3>
 
-        <form method="POST" action="/listings/<%= listing._id%>?_method=PUT">
-            <input name="listing[title]" value="<%= listing.title %>" type="text">
-            <br><br>
-            <textarea name="listing[description]"><%=listing.description %>
-        </textarea>
-            <br><br>
-            <input name="listing[image]" value="<%= listing.image %>" type="text">
-            <br><br>
-            <input name="listing[price]" value="<%= listing.price %>" type="number">
-            <br><br>
-            <input name="listing[country]" value="<%= listing.country %>" type="text">
-            <br><br>
-            <input name="listing[location]" value="<%= listing.location %>" type="text">
-            <br><br>
-            <button>Add</button>
-        </form>
+      <form method="POST" action="/listings/<%= listing._id%>?_method=PUT">
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            name="listing[title]"
+            value="<%= listing.title %>"
+            type="text"
+            class="form-control"
+          />
+        </div>
 
+        <!-- <br /><br /> -->
 
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea name="listing[description]" class="form-control">
+<%=listing.description %>
+        </textarea
+          >
+        </div>
 
+        <!-- <br /><br /> -->
 
-    </body>
+        <div class="mb-3">
+          <label for="image" class="form-label">Image</label>
+
+          <input
+            name="listing[image]"
+            value="<%= listing.image %>"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <!-- <br /><br /> -->
+        <div class="row">
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+
+            <input
+              name="listing[price]"
+              value="<%= listing.price %>"
+              type="number"
+              class="form-control"
+            />
+          </div>
+          <!-- <br /><br /> -->
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+
+            <input
+              name="listing[country]"
+              value="<%= listing.country %>"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <!-- <br /><br /> -->
+        <div class="mb-3">
+          <label for="location" class="form-label">Location</label>
+
+          <input
+            name="listing[location]"
+            value="<%= listing.location %>"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <!-- <br /><br /> -->
+        <button class="btn btn-dark add-btn mt-3">Add</button>
+        <!-- <br /><br /> -->
+      </form>
+    </div>
+  </div>
+  <br /><br />
+</body>
