--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,5 @@
 <% layout("/layouts/boilerplate")%>
+
 <body>
   <div class="row">
     <div class="col-8 offset-2">
@@ -72,9 +73,10 @@
           />
         </div>
         <!-- <br /><br /> -->
-        <button class="btn btn-dark add-btn">Add</button>
+        <button class="btn btn-dark add-btn mt-3">Add</button>
+        <!-- <br /><br /> -->
       </form>
-      <br /><br />
     </div>
   </div>
+  <br /><br />
 </body>
