--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -18,7 +18,7 @@
                                 <b>
                                     <%= listing.title %> <br>
                                 </b>
-                                &#8377 <%= listing.price.toLocaleString("en-IN") %>/night
+                                &#8377 <%= listing.price.toLocaleString("en-IN") %>
                             </p>
 
                         </div>
