--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,82 +1,54 @@
 <% layout("/layouts/boilerplate")%>
 
-<body>
-  <div class="row">
-    <div class="col-8 offset-2">
-      <br /><br />
-      <h3>Create a New Listing</h3>
-      <form method="POST" action="/listings">
-        <div class="mb-3">
-          <label for="title" class="form-label">Title</label>
-          <input
-            name="listing[title]"
-            placeholder="Add a catchy title"
-            type="text"
-            class="form-control"
-          />
-        </div>
-        <!-- <br /><br /> -->
-
-        <div class="mb-3">
-          <label for="description" class="form-label">Description</label>
-          <textarea
-            name="listing[description]"
-            placeholder="enter description"
-            class="form-control"
-          >
-          </textarea>
-        </div>
-        <!-- <br /><br /> -->
-        <div class="mb-3">
-          <label for="image" class="form-label">Image</label>
-          <input
-            name="listing[image]"
-            placeholder="enter URL"
-            type="text"
-            class="form-control"
-          />
-        </div>
-        <!-- <br /><br /> -->
-
-        <div class="row">
-          <div class="mb-3 col-md-4">
-            <label for="price" class="form-label">Price</label>
-            <input
-              name="listing[price]"
-              placeholder="1200"
-              type="number"
-              class="form-control"
-            />
+  <body>
+    <div class="row">
+      <div class="col-8 offset-2">
+        <br /><br />
+        <h3>Create a New Listing</h3>
+        <form method="POST" action="/listings" class="needs-validation" novalidate>
+          <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required />
           </div>
-
           <!-- <br /><br /> -->
-          <div class="mb-3 col-md-8">
-            <label for="country" class="form-label">Country</label>
 
-            <input
-              name="listing[country]"
-              placeholder="India"
-              type="text"
-              class="form-control"
-            />
+          <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" placeholder="enter description" class="form-control" required>
+          </textarea>
           </div>
-        </div>
-        <!-- <br /><br /> -->
-        <div class="mb-3">
-          <label for="location" class="form-label">Location </label>
+          <!-- <br /><br /> -->
+          <div class="mb-3">
+            <label for="image" class="form-label">Image</label>
+            <input name="listing[image]" placeholder="enter URL" type="text" class="form-control" required />
+          </div>
+          <!-- <br /><br /> -->
 
-          <input
-            name="listing[location]"
-            placeholder="Jaipur, Rajasthan"
-            type="text"
-            class="form-control"
-          />
-        </div>
-        <!-- <br /><br /> -->
-        <button class="btn btn-dark add-btn mt-3">Add</button>
-        <!-- <br /><br /> -->
-      </form>
+          <div class="row">
+            <div class="mb-3 col-md-4">
+              <label for="price" class="form-label">Price</label>
+              <input name="listing[price]" placeholder="1200" type="number" class="form-control" required />
+            </div>
+
+            <!-- <br /><br /> -->
+            <div class="mb-3 col-md-8">
+              <label for="country" class="form-label">Country</label>
+
+              <input name="listing[country]" placeholder="India" type="text" class="form-control" required />
+            </div>
+          </div>
+          <!-- <br /><br /> -->
+          <div class="mb-3">
+            <label for="location" class="form-label">Location </label>
+
+            <input name="listing[location]" placeholder="Jaipur, Rajasthan" type="text" class="form-control" required />
+          </div>
+          <!-- <br /><br /> -->
+          <button class="btn btn-dark add-btn mt-3">Add</button>
+          <!-- <br /><br /> -->
+        </form>
+      </div>
     </div>
-  </div>
-  <br /><br />
-</body>
+    <br /><br />
+
+  </body>
