--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,17 +4,19 @@
     <div class="row mt-3">
         <div class="clo-8 offset-3">
 
-            <h3>Listing Details</h3>
+            <h3>
+                <%= listing.title %>
+            </h3>
         </div>
 
         <div class="card col-6 offset-3 show-card">
             <img src="<%= listing.image%> " class="card-img-top show-image" alt="listing_image">
             <div class="card-body">
                 <p class="card-text">
-                    <b>
+                    <!-- <b>
 
                         <%= listing.title %> <br>
-                    </b>
+                    </b> -->
                     <%= listing.description %> <br>
                         &#8377 <%= listing.price.toLocaleString("en-IN") %> <br>
                             <%= listing.location %> <br>
