--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -56,6 +56,26 @@
                 <button class="btn btn-dark offset-4 add-btn"> Delete </button>
             </form>
         </div>
+        <br>
+        <div class="col-8 offset-3 mb-3">
+            <hr>
+            <h4>
+                Leave Reaview
+            </h4>
+            <form action="">
+                <div class="mb-3 mt-3">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
+                </div>
+                <div class="mb-3 mt-3">
+                    <label for="comment" class="form-label"> Comment</label>
+                    <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+                </div>
+                <button class="btn btn-outline-secondary mt-3 mb-3">Submit</button>
+            </form>
+        </div>
+
+
 
     </div>
 
