--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -64,14 +64,18 @@
             <h4>
                 Leave Reaview
             </h4>
-            <form action="/listings/<%= listing.id %>/reviews" method="POST">
+            <form action="/listings/<%= listing.id %>/reviews" method="POST" class="needs-validation" novalidate>
                 <div class="mb-3 mt-3">
                     <label for="rating" class="form-label">Rating</label>
                     <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
                 </div>
                 <div class="mb-3 mt-3">
                     <label for="comment" class="form-label"> Comment</label>
-                    <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
+                    <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5"
+                        required></textarea>
+                    <div class="invalid-feedback">
+                        Please enter your review comment.
+                    </div>
                 </div>
                 <button class="btn btn-outline-secondary mt-3 mb-3">Submit</button>
             </form>
