--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,76 +1,51 @@
 <% layout("/layouts/boilerplate")%>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <h3>Edit Listing</h3>
+      <form method="POST" action="/listings/<%= listing._id%>?_method=PUT" class="needs-validation" novalidate>
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required />
+          <div class="valid-feedback">Title looks good!</div>
+        </div>
 
-  <body>
-    <div class="row">
-      <div class="col-8 offset-2">
-        <br /><br />
-        <h3>Edit Listing</h3>
-
-        <form method="POST" action="/listings/<%= listing._id%>?_method=PUT" class="needs-validation" novalidate>
-          <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
-            <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required />
-            <div class="valid-feedback">
-              Title looks good!
-            </div>
-          </div>
-
-          <!-- <br /><br /> -->
-
-          <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control">
-<%=listing.description %>
-
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea name="listing[description]" class="form-control">
+          <%=listing.description %>
         </textarea>
-            <div class="valid-feedback">
-              looks good!
-            </div>
+          <div class="valid-feedback">looks good!</div>
+        </div>
+
+        <div class="mb-3">
+          <label for="image" class="form-label">Image</label>
+
+          <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required />
+          <div class="invalid-feedback">link not validate</div>
+        </div>
+
+        <div class="row">
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required />
+            <div class="invalid-feedback">Price is required</div>
           </div>
 
-          <!-- <br /><br /> -->
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
 
-          <div class="mb-3">
-            <label for="image" class="form-label">Image</label>
-
-            <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required />
-            <div class="invalid-feedback">
-              link not validate
-            </div>
+            <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" required />
+            <div class="invalid-feedback">Country is required</div>
           </div>
-          <!-- <br /><br /> -->
-          <div class="row">
-            <div class="mb-3 col-md-4">
-              <label for="price" class="form-label">Price</label>
-              <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required />
-              <div class="invalid-feedback">
-                Price is required
-              </div>
-            </div>
-            <!-- <br /><br /> -->
-            <div class="mb-3 col-md-8">
-              <label for="country" class="form-label">Country</label>
+        </div>
 
-              <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" required />
-              <div class="invalid-feedback">
-                Country is required
-              </div>
-            </div>
-          </div>
-          <!-- <br /><br /> -->
-          <div class="mb-3">
-            <label for="location" class="form-label">Location</label>
+        <div class="mb-3">
+          <label for="location" class="form-label">Location</label>
 
-            <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required />
-            <div class="invalid-feedback">
-              Location is required
-            </div>
-          </div>
-          <!-- <br /><br /> -->
-          <button class="btn btn-dark add-btn mt-3">Add</button>
-          <!-- <br /><br /> -->
-        </form>
-      </div>
+          <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required />
+          <div class="invalid-feedback">Location is required</div>
+        </div>
+        <button class="btn btn-dark add-btn mt-3">Add</button>
+      </form>
     </div>
-    <br /><br />
-  </body>
+  </div>
