--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,35 +13,24 @@
     <img src="<%= listing.image%> " class="card-img-top show-image" alt="listing_image">
     <div class="card-body">
       <p class="card-text">
-        <!-- <b>
+        Owned by :
+        <i><%=listing.owner.username%></i>
+      </p>
 
-                        <%= listing.title %> <br>
-                    </b> -->
-        <%= listing.description %> <br>
-        &#8377 <%= listing.price.toLocaleString("en-IN") %> <br>
-        <%= listing.location %> <br>
-        <%= listing.country %> <br>
+      <p class="card-text">
+        <%= listing.description %>></p>
+      <p class="card-text">
+
+        &#8377 <%= listing.price.toLocaleString("en-IN") %>
+      </p>
+      <p class="card-text">
+        <%= listing.location %>
+      </p>
+      <p class="card-text">
+        <%= listing.country %>
       </p>
     </div>
   </div>
-  <!-- <ul>
-                    <li>
-                        <%= listing.title %>
-                    </li>
-                    <li>
-                        <%= listing.description %>
-                    </li>
-                    <li>
-                        &#8377 <%= listing.price.toLocaleString("en-IN") %>
-                    </li>
-                    <li>
-                        <%= listing.location %>
-                    </li>
-                    <li>
-                        <%= listing.country %>
-                    </li>
-                </ul> -->
-  <!-- <br> -->
   <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3"> Edit </a>
     <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
@@ -94,9 +83,9 @@
         </form>
       </div>
       <%}%>
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
 
 
-    <!-- </body> -->
+  <!-- </body> -->
