--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -31,12 +31,14 @@
       </p>
     </div>
   </div>
+  <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
   <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3"> Edit </a>
     <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
       <button class="btn btn-dark offset-4 add-btn"> Delete </button>
     </form>
   </div>
+  <%}%>
   <br>
   <!-- reviews form  -->
   <div class="col-8 offset-3 mb-3">
@@ -45,44 +47,44 @@
       Leave Reaview
     </h4>
     <form action="/listings/<%= listing.id %>/reviews" method="POST" class="needs-validation" novalidate>
-      <div class="mb-3 mt-3">
-        <label for="rating" class="form-label">Rating</label>
-        <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
-      </div>
-      <div class="mb-3 mt-3">
-        <label for="comment" class="form-label"> Comment</label>
-        <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
-        <div class="invalid-feedback">
-          Please enter your review comment.
-        </div>
-      </div>
-      <button class="btn btn-outline-secondary mt-3 mb-3">Submit</button>
+  <div class="mb-3 mt-3">
+    <label for="rating" class="form-label">Rating</label>
+    <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
+  </div>
+  <div class="mb-3 mt-3">
+    <label for="comment" class="form-label"> Comment</label>
+    <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
+    <div class="invalid-feedback">
+      Please enter your review comment.
+    </div>
+  </div>
+  <button class="btn btn-outline-secondary mt-3 mb-3">Submit</button>
 
-    </form>
-    <hr />
-    <p>
-      <b>
-        All Reivews
-      </b>
-    </p>
-    <div class="row">
+  </form>
+  <hr />
+  <p>
+    <b>
+      All Reivews
+    </b>
+  </p>
+  <div class="row">
 
-      <% for(let review of listing.reviews){ %>
-      <div class="card col-5 mb-3 ms-3">
-        <div class="card-body">
-          <h5 class="card-title">xyz person</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">
-            <%= review.comment %>
-          </h6>
-          <p class="card-text">Rating:
-            <%= review.rating %> stars
-          </p>
-        </div>
-        <form class="mb-3" method="post" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-          <button class="btn btn-dark btn-sm">Delete</button>
-        </form>
+    <% for(let review of listing.reviews){ %>
+    <div class="card col-5 mb-3 ms-3">
+      <div class="card-body">
+        <h5 class="card-title">xyz person</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">
+          <%= review.comment %>
+        </h6>
+        <p class="card-text">Rating:
+          <%= review.rating %> stars
+        </p>
       </div>
-      <%}%>
+      <form class="mb-3" method="post" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
+        <button class="btn btn-dark btn-sm">Delete</button>
+      </form>
+    </div>
+    <%}%>
       </div>
     </div>
   </div>
