implementing MVC (model, view, controller) design pattern for listings

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,7 +20,7 @@
       </p>
 
       <p class="card-text">
-        <%= listing.description %>>
+        <%= listing.description %>
       </p>
       <p class="card-text">
 
