--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -52,18 +52,40 @@
     Leave Reaview
   </h4>
   <form action="/listings/<%= listing.id %>/reviews" method="POST" class="needs-validation" novalidate>
-    <div class="mb-3 mt-3">
+    <!-- <div class="mb-3 mt-3">
       <label for="rating" class="form-label">Rating</label>
       <input class="form-range" type="range" min="1" max="5" id="rating" name="review[rating]">
-    </div>
+    </div> -->
+
+
     <div class="mb-3 mt-3">
-      <label for="comment" class="form-label"> Comment</label>
-      <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
-      <div class="invalid-feedback">
-        Please enter your review comment.
+      <!-- rating design from starability -->
+      <label for="rating" class="form-label">Rating</label>
+      <fieldset class="starability-slot">
+
+        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+        <label for="first-rate1" title="Terrible">1 star</label>
+        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+        <label for="first-rate2" title="Not good">2 stars</label>
+        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+        <label for="first-rate3" title="Average">3 stars</label>
+        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+        <label for="first-rate4" title="Very good">4 stars</label>
+        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+        <label for="first-rate5" title="Amazing">5 stars</label>
+      </fieldset>
+
+
+
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label"> Comment</label>
+        <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
+        <div class="invalid-feedback">
+          Please enter your review comment.
+        </div>
       </div>
-    </div>
-    <button class="btn btn-outline-secondary mt-3 mb-3">Submit</button>
+      <button class="btn btn-outline-secondary mt-3 mb-3">Submit</button>
   </form>
   <hr />
   <p>
@@ -82,8 +104,8 @@
       <h6 class="card-subtitle mb-2 text-body-secondary">
         <%= review.comment %>
       </h6>
-      <p class="card-text">Rating:
-        <%= review.rating %> stars
+      <p class="starability-result" data-rating="<%= review.rating %>">
+        Rated: 3 stars
       </p>
     </div>
     <form class="mb-3" method="post" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
