--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,7 +10,7 @@
   </div>
 
   <div class="card col-6 offset-3 show-card litsing-card">
-    <img src="<%= listing.image%> " class="card-img-top show-image" alt="listing_image">
+    <img src="<%= listing.image.url%> " class="card-img-top show-image" alt="listing_image">
     <div class="card-body">
       <p class="card-text">
         Owned by :
