--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,64 +1,91 @@
 <% layout("/layouts/boilerplate")%>
 
-
 <div class="row">
   <div class="col-8 offset-2">
     <br /><br />
     <h3>Create a New Listing</h3>
-    <form method="POST" action="/listings" class="needs-validation" novalidate enctype="multipart/form-data">
+    <form
+      method="POST"
+      action="/listings"
+      class="needs-validation"
+      novalidate
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
-        <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required />
-        <div class="valid-feedback">
-          Title looks good!
-        </div>
+        <input
+          name="listing[title]"
+          placeholder="Add a catchy title"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="valid-feedback">Title looks good!</div>
       </div>
       <!-- <br /><br /> -->
 
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
-        <textarea name="listing[description]" placeholder="enter description" class="form-control" required>
-          </textarea>
-        <div class="invalid-feedback">
-          Description not validated
-        </div>
+        <textarea
+          name="listing[description]"
+          placeholder="enter description"
+          class="form-control"
+          required
+        >
+        </textarea>
+        <div class="invalid-feedback">Description not validated</div>
       </div>
       <div class="mb-3">
         <label for="image" class="form-label">Upload Image</label>
-        <input name="listing[image]" type="file" class="form-control" required />
-        <div class="invalid-feedback">
-          link not validated
-        </div>
+        <input
+          name="listing[image]"
+          type="file"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">link not validated</div>
       </div>
       <!-- <br /><br /> -->
 
       <div class="row">
         <div class="mb-3 col-md-4">
           <label for="price" class="form-label">Price</label>
-          <input name="listing[price]" placeholder="1200" type="number" class="form-control" required />
-          <div class="invalid-feedback">
-            not validated
-          </div>
+          <input
+            name="listing[price]"
+            placeholder="1200"
+            type="number"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">not validated</div>
         </div>
 
         <!-- <br /><br /> -->
         <div class="mb-3 col-md-8">
           <label for="country" class="form-label">Country</label>
 
-          <input name="listing[country]" placeholder="India" type="text" class="form-control" required />
-          <div class="invalid-feedback">
-            not validated
-          </div>
+          <input
+            name="listing[country]"
+            placeholder="India"
+            type="text"
+            class="form-control"
+            required
+          />
+          <div class="invalid-feedback">not validated</div>
         </div>
       </div>
       <!-- <br /><br /> -->
       <div class="mb-3">
         <label for="location" class="form-label">Location </label>
 
-        <input name="listing[location]" placeholder="Jaipur, Rajasthan" type="text" class="form-control" required />
-        <div class="invalid-feedback">
-          not validated
-        </div>
+        <input
+          name="listing[location]"
+          placeholder="Jaipur, Rajasthan"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">not validated</div>
       </div>
       <!-- <br /><br /> -->
       <button class="btn btn-dark add-btn mt-3">Add</button>
